--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,8 +62,8 @@
 		  "DT_TOKEN": {
 	    	        "description": "Dynatrace API token with these permissions: Ingest metrics, Ingest logs, Ingest events, Ingest OpenTelemetry, Read metrics, Write settings"
 		},
-		  "OPEN_AI_TOKEN": {
-			"description": "OpenAI API Token. Go to https://platform.openai.com/api-keys"
+		  "DT_OPERATOR_TOKEN": {
+			"description": "Dynatrace API token with these permissions: Create ActiveGate token, Read entities, Read Settings, Write Settings, Access problem and event feed, metrics and topology, Read configuration, Write configuration, Paas integration - installer downloader"
 		}
 	}
 }
