added limits to easytrade manifests

--- a/deployment/broker-service.yaml
+++ b/deployment/broker-service.yaml
@@ -41,6 +41,9 @@ spec:
             requests:
               cpu: 100m
               memory: 300Mi
+            limits:
+              cpu: 100m
+              memory: 400Mi
 ---
 apiVersion: v1
 kind: Service
