--- a/deployment/calculationservice.yaml
+++ b/deployment/calculationservice.yaml
@@ -19,3 +19,6 @@ spec:
             requests:
               cpu: 10m
               memory: 10Mi
+            limits:
+              cpu: 20m
+              memory: 20Mi
