--- a/deployment/accountservice.yaml
+++ b/deployment/accountservice.yaml
@@ -23,8 +23,11 @@ spec:
               value: "accountservice"
           resources:
             requests:
-              cpu: 150m
+              cpu: 100m
               memory: 100Mi
+            limits:
+              cpu: 150m
+              memory: 200Mi
 ---
 apiVersion: v1
 kind: Service
