--- a/deployment/aggregator-service.yaml
+++ b/deployment/aggregator-service.yaml
@@ -31,3 +31,6 @@ spec:
           requests:
             cpu: 50m
             memory: 100Mi
+          limits:
+            cpu: 50m
+            memory: 100Mi
