--- a/deployment/contentcreator.yaml
+++ b/deployment/contentcreator.yaml
@@ -22,5 +22,8 @@ spec:
                   key: JAVA_CONNECTION_STRING
           resources:
             requests:
-              cpu: 150m
+              cpu: 100m
               memory: 200Mi
+            limits:
+              cpu: 150m
+              memory: 300Mi
