--- a/deployment/loginservice.yaml
+++ b/deployment/loginservice.yaml
@@ -28,6 +28,9 @@ spec:
             requests:
               cpu: 100m
               memory: 350Mi
+            limits:
+              cpu: 100m
+              memory: 350Mi
 ---
 apiVersion: v1
 kind: Service
