--- a/deployment/manager.yaml
+++ b/deployment/manager.yaml
@@ -26,6 +26,9 @@ spec:
                   key: DOTNET_CONNECTION_STRING
           resources:
             requests:
+              cpu: 100m
+              memory: 350Mi
+            limits:
               cpu: 150m
               memory: 350Mi
 ---
