--- a/deployment/pricing-service.yaml
+++ b/deployment/pricing-service.yaml
@@ -36,6 +36,9 @@ spec:
             requests:
               cpu: 100m
               memory: 350Mi
+            limits:
+              cpu: 100m
+              memory: 350Mi
 ---
 apiVersion: v1
 kind: Service
