--- a/dynatrace/dynakube.yaml
+++ b/dynatrace/dynakube.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dynakube
   namespace: dynatrace
   annotations:
-    feature.dynatrace.com/automatic-kubernetes-api-monitoring-cluster-name: "devobs-dt-demo"
+    feature.dynatrace.com/automatic-kubernetes-api-monitoring-cluster-name: "CLUSTER_NAME_TO_REPLACE"
   # Optional: necessary in case of a node using cgroup V2
   # annotations:
   #   feature.dynatrace.com/oneagent-privileged: "true"
