added ownership labels

--- a/deployment/credit-card-order-service.yaml
+++ b/deployment/credit-card-order-service.yaml
@@ -10,6 +10,7 @@ spec:
     metadata:
       labels:
         app: credit-card-order-service
+        owner: team-payments
     spec:
       initContainers:
         - name: download-debugging-agent
