--- a/deployment/frontend.yaml
+++ b/deployment/frontend.yaml
@@ -10,6 +10,7 @@ spec:
     metadata:
       labels:
         app: frontend
+        owner: team-frontend
     spec:
       containers:
         - name: frontend
