--- a/deployment/frontendreverseproxy.yaml
+++ b/deployment/frontendreverseproxy.yaml
@@ -10,6 +10,7 @@ spec:
     metadata:
       labels:
         app: frontendreverseproxy
+        owner: team-frontend
     spec:
       containers:
         - name: frontendreverseproxy
