--- a/deployment/credit-card-order-service.yaml
+++ b/deployment/credit-card-order-service.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: credit-card-order-service
+  labels:
+    owner: team-payments
 spec:
   selector:
     matchLabels:
@@ -58,7 +60,7 @@ spec:
               memory: 200Mi
             limits:
               cpu: 150m
-              memory: 300Mi
+              memory: 350Mi
       volumes:
         - name: debugger
           emptyDir: {}
