--- a/deployment/frontend.yaml
+++ b/deployment/frontend.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
+  labels:
+    owner: team-frontend
 spec:
   selector:
     matchLabels:
