--- a/deployment/pricing-service.yaml
+++ b/deployment/pricing-service.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pricing-service
+  labels:
+    owner: team-payments
 spec:
   selector:
     matchLabels:
