--- a/deployment/rabbitmq.yaml
+++ b/deployment/rabbitmq.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq
+  labels:
+    owner: team-platform
 spec:
   selector:
     matchLabels:
