added annotation to credit card service

--- a/deployment/credit-card-order-service.yaml
+++ b/deployment/credit-card-order-service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: credit-card-order-service
   labels:
     owner: team-payments
+  annotations:
+    owner: team-payments
 spec:
   selector:
     matchLabels:
